[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/items/CollectionInfo.gd" type="Script" id=1]

[node name="CollectionInfo" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2
script = ExtResource( 1 )

[node name="Label-v02" type="Label" parent="."]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Address"

[node name="AddressField" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 1024.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="."]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Object"

[node name="ObjectField" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v03" type="Label" parent="."]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Chain"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 136.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 88.0
custom_constants/separation = 16

[node name="ChainField" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 821.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="SelectButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 837.0
margin_right = 888.0
margin_bottom = 24.0
text = "select"
